[gd_scene load_steps=8 format=3 uid="uid://de3t6pr1ct7sa"]

[ext_resource type="Script" uid="uid://bvrpq5kw64lpf" path="res://Main.gd" id="1_glv2v"]
[ext_resource type="PackedScene" uid="uid://c57epm6awpv8o" path="res://Mob.tscn" id="2_uu6xs"]
[ext_resource type="PackedScene" uid="uid://dcgyvb30a5yst" path="res://HUD.tscn" id="3_cm0pq"]
[ext_resource type="PackedScene" uid="uid://wv0niduwy0r0" path="res://Player.tscn" id="3_r0du0"]
[ext_resource type="AudioStream" uid="uid://d0mpxnhm2qdld" path="res://dodge_the_creeps_2d_assets/art/House In a Forest Loop.ogg" id="5_3dxm6"]
[ext_resource type="AudioStream" uid="uid://b21st34knbcha" path="res://dodge_the_creeps_2d_assets/art/gameover.wav" id="6_lgr22"]

[sub_resource type="Curve2D" id="Curve2D_rxg2q"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_glv2v")
mob_scene = ExtResource("2_uu6xs")

[node name="HUD" parent="." instance=ExtResource("3_cm0pq")]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.533333, 0.333333, 1)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_rxg2q")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" parent="." instance=ExtResource("3_r0du0")]
position = Vector2(-160, 80)

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition2D" type="Marker2D" parent="."]
position = Vector2(240, 440)
gizmo_extents = 100.1

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3dxm6")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lgr22")

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
